--- a/src/app/pages/trivia/trivia.component.html
+++ b/src/app/pages/trivia/trivia.component.html
@@ -47,7 +47,9 @@
     class="w-full max-w-xl bg-white/100 backdrop-blur-sm p-10 rounded-2xl shadow-2xl text-center animate-fade-in-up space-y-6">
     
     <h2 class="text-4xl font-extrabold text-gray-800 drop-shadow mb-4">¡Trivia finalizada!</h2>
-
+     <p class="text-xl text-gray-700 font-medium">Tu puntaje: 
+      <span class="text-violet-700 font-bold">{{ score }}/{{ questions.length }}</span>
+     </p>
     <p-button 
       label="Volver a empezar" 
       icon="pi pi-refresh" 
