--- a/src/app/pages/trivia/trivia.component.html
+++ b/src/app/pages/trivia/trivia.component.html
@@ -1,10 +1,3 @@
-<div class="area">
-  <ul class="circles">
-    <li></li><li></li><li></li><li></li><li></li>
-    <li></li><li></li><li></li><li></li><li></li>
-  </ul>
-</div>
-
 <div class="min-h-screen flex items-center justify-center px-4">
   
   <div 
@@ -15,9 +8,9 @@
       {{ currentIndex + 1 }}
     </div>
 
-    <h2 class="text-2xl md:text-3xl font-extrabold text-gray-800 mb-6 text-center leading-snug tracking-wide">
+    <h4 class="text-2xl md:text-3xl font-extrabold text-gray-800 mb-6 text-center leading-snug tracking-wide">
       {{ currentQuestion.question }}
-    </h2>
+    </h4>
 
     <img 
       *ngIf="currentQuestion.image" 
@@ -46,8 +39,8 @@
     *ngIf="quizFinished" 
     class="w-full max-w-xl bg-white/100 backdrop-blur-sm p-10 rounded-2xl shadow-2xl text-center animate-fade-in-up space-y-6">
     
-    <h2 class="text-4xl font-extrabold text-gray-800 drop-shadow mb-4">¡Trivia finalizada!</h2>
-     <p class="text-xl text-gray-700 font-medium">Tu puntaje: 
+    <h4 class="text-4xl font-extrabold text-gray-800 drop-shadow mb-4">¡Trivia finalizada!</h4>
+     <p class="text-xl text-gray-700 font-medium mb-3">Tu puntaje: 
       <span class="text-violet-700 font-bold">{{ score }}/{{ questions.length }}</span>
      </p>
     <p-button 
@@ -58,4 +51,10 @@
       class="p-button-rounded shadow-lg hover:scale-105 transition-transform"
     ></p-button>
   </div>
+</div>
+<div class="area">
+  <ul class="circles">
+    <li></li><li></li><li></li><li></li><li></li>
+    <li></li><li></li><li></li><li></li><li></li>
+  </ul>
 </div>
