--- a/src/app/pages/trivia/trivia.component.html
+++ b/src/app/pages/trivia/trivia.component.html
@@ -14,7 +14,7 @@
       {{ currentIndex + 1 }}
     </div>
 
-    <h4 class="text-2xl md:text-3xl font-extrabold text-gray-800 mb-6 text-center leading-snug tracking-wide">
+    <h4 class="text-xl md:text-2xl font-bold text-gray-800 mb-4 text-center leading-snug tracking-wide">
       {{ currentQuestion.question }}
     </h4>
 
@@ -45,7 +45,7 @@
     *ngIf="quizFinished" 
     class="w-full max-w-xl bg-white/100 backdrop-blur-sm p-5 rounded-2xl shadow-2xl text-center animate-fade-in-up space-y-6">
     
-    <h4 class="text-4xl font-extrabold text-gray-800 drop-shadow mb-4">¡Trivia finalizada!</h4>
+    <h4 class="text-2xl font-extrabold text-gray-800 drop-shadow mb-4">¡Trivia finalizada!</h4>
      <p class="text-xl text-gray-700 font-medium mb-3">Tu puntaje: 
       <span class="text-violet-700 font-bold">{{ score }}/{{ questions.length }}</span>
      </p>
