--- a/src/app/pages/trivia/trivia.component.html
+++ b/src/app/pages/trivia/trivia.component.html
@@ -18,12 +18,13 @@
       {{ currentQuestion.question }}
     </h4>
 
- <img 
-  *ngIf="currentQuestion.image" 
-  [src]="currentQuestion.image" 
-  alt="Pregunta" 
-  class="max-w-xs sm:max-w-sm md:max-w-md max-h-64 object-contain mx-auto rounded-xl mb-3 shadow-md" />
-
+  <div class="flex justify-center mb-3">
+    <img 
+      *ngIf="currentQuestion.image" 
+      [src]="currentQuestion.image" 
+      alt="Pregunta"
+      class="w-40 sm:w-48 md:w-56 max-h-48 object-contain rounded-xl shadow-md" />
+  </div>
 
     <div class="grid gap-4">
       <button
